apps/test/example/staging/deployment-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
  namespace: test-example-staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: example
  template:
    metadata:
      labels:
        app.kubernetes.io/name: example
        istio.io/dataplane-mode: ambient
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: example
        image: registry.registry.svc.cluster.local/example-service:828c31f942e8913ab2af53a2841c180586c5b7e1
        name: example
        ports:
        - containerPort: 8080
          name: http
