apps/test/example/staging/example-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: example
    app.kubernetes.io/managed-by: netamos
    app.kubernetes.io/name: example
spec:
  hostnames:
  - example.staging.khuedoan.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: istio-system
  rules:
  - backendRefs:
    - name: example
      port: 8080
