apps/test/example/staging/namespace-test-example-staging.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/dataplane-mode: ambient
  name: test-example-staging
