apps/test/example/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-example-staging
  labels:
    istio.io/dataplane-mode: ambient
