apps/test/example/staging/service-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
  namespace: test-example-staging
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    app.kubernetes.io/name: example
